Version 1.01 patch, includes fix for jumping against singular tiles. Originally players jumping against an open tile would pop up higher than intended. Added new stat reader for debugging.

--- a/tp.css
+++ b/tp.css
@@ -27,8 +27,8 @@ div.application {
 .demonstration {
   flex:1;
   border-top: 1px solid black;
+  position: relative;
 }
-
 
 .section {
   display: flex; flex-flow: column nowrap;
@@ -38,6 +38,14 @@ div.application {
 
 .section:not(:last-child) {
   border-right: 1px solid black;
+}
+
+.stats {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #FF0;
+  background: rgba(0,0,0,0.25);
 }
 
 canvas {
